# tokio-axum-example

./: .env  Cargo.toml  diesel.toml
migrations/2023-11-29-193137_create_posts/: down.sql  up.sql
src/: db.rs  main.rs  mod.rs  models.rs  schema.rs
