[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
diesel = { version = "2.1.3", features = ["mysql", "r2d2", "uuid", "chrono", "numeric"] }
r2d2 = "0.8.10"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }